adds markup for entire nav and credit cards submenu

--- a/nav.html
+++ b/nav.html
@@ -27,13 +27,25 @@
         <span class="nav-menu--mob nav-menu--mid"></span>
         <span class="nav-menu--mob nav-menu--bottom"></span>
       </div>
-      <div class="nav-menu">
-        <div class="nav-menu__item"><a href="/the-ascent/credit-cards/" class="nav-menu__link nav--credit ">Credit Cards</a></div>
+      <nav class="nav-menu" aria-label="Main Navigation">
+        <div class="nav-menu__item">
+				 <a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link nav--credit ">Credit Cards</a>
+				 <ul>
+				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/">Best Credit Cards for 2019</a></li>
+				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-cash-back-credit-card/">Best Cash Back Cards</a></li>
+				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-balance-transfer-credit-cards/">Best Balance Transfer Cards</a></li>
+				 	<li><a href="#">Best Sign-Up Bonus Cards</a></li>
+				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-travel-rewards-credit-cards/">Best Travel Credit Cards</a></li>
+				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-zero-interest-cards/">Best 0% Interest Cards</a></li>
+				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-rewards-credit-cards/">Best Rewards Cards</a></li>
+				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-no-annual-fee-cards/">Best No Annual Fee Cards</a></li>
+				 </ul>
+				</div>
         <div class="nav-menu__item"><a href="/the-ascent/banks/" class="nav-menu__link nav--banking ">Banking</a></div>
         <div class="nav-menu__item"><a href="/the-ascent/buying-stocks/" class="nav-menu__link nav--brokerages ">Brokerage</a></div>
         <div class="nav-menu__item"><a href="/the-ascent/personal-loans/" class="nav-menu__link nav--loans ">Loans</a></div>
         <div class="nav-menu__item"><a href="/the-ascent/blog/" class="nav-menu__link nav--blog ">Blog</a></div>
-      </div>
+      </nav>
     </div>
   </div>
 </body>
