--- a/nav.html
+++ b/nav.html
@@ -30,7 +30,7 @@
       <nav class="nav-menu" aria-label="Main Navigation">
         <div class="nav-menu__item">
 				 <a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link nav--credit ">Credit Cards</a>
-				 <ul>
+				 <ul class=nav-submenu>
 				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/">Best Credit Cards for 2019</a></li>
 				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-cash-back-credit-card/">Best Cash Back Cards</a></li>
 				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-balance-transfer-credit-cards/">Best Balance Transfer Cards</a></li>
@@ -41,7 +41,15 @@
 				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-no-annual-fee-cards/">Best No Annual Fee Cards</a></li>
 				 </ul>
 				</div>
-        <div class="nav-menu__item"><a href="/the-ascent/banks/" class="nav-menu__link nav--banking ">Banking</a></div>
+        <div class="nav-menu__item">
+					<a href="/the-ascent/banks/" class="nav-menu__link nav--banking ">Banking</a>
+					<ul class=nav-submenu>
+						<li><a href="https://www.fool.com/the-ascent/banks/best-savings-accounts/">Best Savings Accounts</a></li>
+						<li><a href="https://www.fool.com/the-ascent/banks/best-cd-rates/">Best CD Accounts</a></li>
+						<li><a href="https://www.fool.com/the-ascent/banks/checking-accounts/">Best Checking Accounts</a></li>
+						<li><a href="https://www.fool.com/the-ascent/banks/money-market/">Best Money Market Accounts</a></li>
+					</ul>
+				</div>
         <div class="nav-menu__item"><a href="/the-ascent/buying-stocks/" class="nav-menu__link nav--brokerages ">Brokerage</a></div>
         <div class="nav-menu__item"><a href="/the-ascent/personal-loans/" class="nav-menu__link nav--loans ">Loans</a></div>
         <div class="nav-menu__item"><a href="/the-ascent/blog/" class="nav-menu__link nav--blog ">Blog</a></div>
