--- a/nav.html
+++ b/nav.html
@@ -50,7 +50,16 @@
 						<li><a href="https://www.fool.com/the-ascent/banks/money-market/">Best Money Market Accounts</a></li>
 					</ul>
 				</div>
-        <div class="nav-menu__item"><a href="/the-ascent/buying-stocks/" class="nav-menu__link nav--brokerages ">Brokerage</a></div>
+        <div class="nav-menu__item">
+					<a href="/the-ascent/buying-stocks/" class="nav-menu__link nav--brokerages ">Brokerage</a>
+					<ul class=nav-submenu>
+						<li><a href="https://www.fool.com/the-ascent/buying-stocks/">Best Brokerages</a></li>
+						<li><a href="https://www.fool.com/the-ascent/buying-stocks/best-online-stock-brokers-beginners/">Beginner's Guide</a></li>
+						<li><a href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-options/">Best Options Brokers</a></li>
+						<li><a href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-iras/">Best Brokers IRAs</a></li>
+						<li><a href="#">Best Robo Advisors</a></li>
+					</ul>
+				</div>
         <div class="nav-menu__item"><a href="/the-ascent/personal-loans/" class="nav-menu__link nav--loans ">Loans</a></div>
         <div class="nav-menu__item"><a href="/the-ascent/blog/" class="nav-menu__link nav--blog ">Blog</a></div>
       </nav>
