Adds markup for blog submenu

--- a/nav.html
+++ b/nav.html
@@ -61,7 +61,16 @@
 					</ul>
 				</div>
         <div class="nav-menu__item"><a href="/the-ascent/personal-loans/" class="nav-menu__link nav--loans ">Loans</a></div>
-        <div class="nav-menu__item"><a href="/the-ascent/blog/" class="nav-menu__link nav--blog ">Blog</a></div>
+        <div class="nav-menu__item">
+					<a href="/the-ascent/blog/" class="nav-menu__link nav--blog ">Blog</a>
+					<ul class=nav-submenu>
+						<li><a href="https://www.fool.com/the-ascent/credit-cards/blog/">Credit Cards</a></li>
+						<li><a href="https://www.fool.com/the-ascent/banks/blog/">Banking</a></li>
+						<li><a href="https://www.fool.com/the-ascent/buying-stocks/blog/">Brokerage</a></li>
+						<li><a href="https://www.fool.com/the-ascent/personal-loans/blog/">Loans</a></li>
+						<li><a href="#">Best Robo Advisors</a></li>
+				  </ul>
+				</div>
       </nav>
     </div>
   </div>
