class naming fix

--- a/nav.html
+++ b/nav.html
@@ -32,7 +32,7 @@
       <nav class="nav-menu" aria-label="Main Navigation">
         <div class="nav-menu__item">
 				 <a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link nav--credit ">Credit Cards</a>
-				 <ul class=nav-submenu>
+				 <ul class="nav-submenu">
 				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/">Best Credit Cards for 2019</a></li>
 				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-cash-back-credit-card/">Best Cash Back Cards</a></li>
 				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-balance-transfer-credit-cards/">Best Balance Transfer Cards</a></li>
@@ -45,7 +45,7 @@
 				</div>
         <div class="nav-menu__item">
 					<a href="/the-ascent/banks/" class="nav-menu__link nav--banking ">Banking</a>
-					<ul class=nav-submenu>
+					<ul class="nav-submenu">
 						<li><a href="https://www.fool.com/the-ascent/banks/best-savings-accounts/">Best Savings Accounts</a></li>
 						<li><a href="https://www.fool.com/the-ascent/banks/best-cd-rates/">Best CD Accounts</a></li>
 						<li><a href="https://www.fool.com/the-ascent/banks/checking-accounts/">Best Checking Accounts</a></li>
@@ -54,7 +54,7 @@
 				</div>
         <div class="nav-menu__item">
 					<a href="/the-ascent/buying-stocks/" class="nav-menu__link nav--brokerages ">Brokerage</a>
-					<ul class=nav-submenu>
+					<ul class="nav-submenu">
 						<li><a href="https://www.fool.com/the-ascent/buying-stocks/">Best Brokerages</a></li>
 						<li><a href="https://www.fool.com/the-ascent/buying-stocks/best-online-stock-brokers-beginners/">Beginner's Guide</a></li>
 						<li><a href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-options/">Best Options Brokers</a></li>
@@ -65,7 +65,7 @@
         <div class="nav-menu__item"><a href="/the-ascent/personal-loans/" class="nav-menu__link nav--loans ">Loans</a></div>
         <div class="nav-menu__item">
 					<a href="/the-ascent/blog/" class="nav-menu__link nav--blog ">Blog</a>
-					<ul class=nav-submenu>
+					<ul class="nav-submenu">
 						<li><a href="https://www.fool.com/the-ascent/credit-cards/blog/">Credit Cards</a></li>
 						<li><a href="https://www.fool.com/the-ascent/banks/blog/">Banking</a></li>
 						<li><a href="https://www.fool.com/the-ascent/buying-stocks/blog/">Brokerage</a></li>
