adds primary ul to contain menu items

--- a/nav.html
+++ b/nav.html
@@ -5,7 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Page Title</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" media="screen" href="nav.css" />
+		<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=PT+Sans:400,700"/>
+
+	<link rel="stylesheet" type="text/css" href="nav.css" />
 	<script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
 	<script src="nav.js"></script>
 </head>
@@ -27,51 +29,100 @@
         <span class="nav-menu--mob nav-menu--mid"></span>
         <span class="nav-menu--mob nav-menu--bottom"></span>
       </div>
-      <nav class="nav-menu" aria-label="Main Navigation">
-        <div class="nav-menu__item">
-				 <a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link nav--credit ">Credit Cards</a>
-				 <ul class=nav-submenu>
-				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/">Best Credit Cards for 2019</a></li>
-				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-cash-back-credit-card/">Best Cash Back Cards</a></li>
-				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-balance-transfer-credit-cards/">Best Balance Transfer Cards</a></li>
-				 	<li><a href="#">Best Sign-Up Bonus Cards</a></li>
-				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-travel-rewards-credit-cards/">Best Travel Credit Cards</a></li>
-				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-zero-interest-cards/">Best 0% Interest Cards</a></li>
-				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-rewards-credit-cards/">Best Rewards Cards</a></li>
-				 	<li><a href="https://www.fool.com/the-ascent/credit-cards/best-no-annual-fee-cards/">Best No Annual Fee Cards</a></li>
-				 </ul>
-				</div>
-        <div class="nav-menu__item">
-					<a href="/the-ascent/banks/" class="nav-menu__link nav--banking ">Banking</a>
-					<ul class=nav-submenu>
-						<li><a href="https://www.fool.com/the-ascent/banks/best-savings-accounts/">Best Savings Accounts</a></li>
-						<li><a href="https://www.fool.com/the-ascent/banks/best-cd-rates/">Best CD Accounts</a></li>
-						<li><a href="https://www.fool.com/the-ascent/banks/checking-accounts/">Best Checking Accounts</a></li>
-						<li><a href="https://www.fool.com/the-ascent/banks/money-market/">Best Money Market Accounts</a></li>
-					</ul>
-				</div>
-        <div class="nav-menu__item">
-					<a href="/the-ascent/buying-stocks/" class="nav-menu__link nav--brokerages ">Brokerage</a>
-					<ul class=nav-submenu>
-						<li><a href="https://www.fool.com/the-ascent/buying-stocks/">Best Brokerages</a></li>
-						<li><a href="https://www.fool.com/the-ascent/buying-stocks/best-online-stock-brokers-beginners/">Beginner's Guide</a></li>
-						<li><a href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-options/">Best Options Brokers</a></li>
-						<li><a href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-iras/">Best Brokers IRAs</a></li>
-						<li><a href="#">Best Robo Advisors</a></li>
-					</ul>
-				</div>
-        <div class="nav-menu__item"><a href="/the-ascent/personal-loans/" class="nav-menu__link nav--loans ">Loans</a></div>
-        <div class="nav-menu__item">
-					<a href="/the-ascent/blog/" class="nav-menu__link nav--blog ">Blog</a>
-					<ul class=nav-submenu>
-						<li><a href="https://www.fool.com/the-ascent/credit-cards/blog/">Credit Cards</a></li>
-						<li><a href="https://www.fool.com/the-ascent/banks/blog/">Banking</a></li>
-						<li><a href="https://www.fool.com/the-ascent/buying-stocks/blog/">Brokerage</a></li>
-						<li><a href="https://www.fool.com/the-ascent/personal-loans/blog/">Loans</a></li>
-						<li><a href="#">Best Robo Advisors</a></li>
-				  </ul>
-				</div>
-      </nav>
+			<nav class="nav-menu" aria-label="Main Navigation">
+				<ul class="nav-menu--list">
+					<li class="nav-menu__item">
+						<a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link nav--credit ">Credit Cards</a>
+						<ul class="nav-submenu-list">
+							<li>
+								<a href="https://www.fool.com/the-ascent/credit-cards/">Best Credit Cards for 2019</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/credit-cards/best-cash-back-credit-card/">Best Cash Back Cards</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/credit-cards/best-balance-transfer-credit-cards/">Best Balance Transfer Cards</a>
+							</li>
+							<li>
+								<a href="#">Best Sign-Up Bonus Cards</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/credit-cards/best-travel-rewards-credit-cards/">Best Travel Credit Cards</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/credit-cards/best-zero-interest-cards/">Best 0% Interest Cards</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/credit-cards/best-rewards-credit-cards/">Best Rewards Cards</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/credit-cards/best-no-annual-fee-cards/">Best No Annual Fee Cards</a>
+							</li>
+						</ul>
+					</li>
+					<li class="nav-menu__item">
+						<a href="/the-ascent/banks/" class="nav-menu__link nav--banking ">Banking</a>
+						<ul class="nav-submenu-list">
+							<li>
+								<a href="https://www.fool.com/the-ascent/banks/best-savings-accounts/">Best Savings Accounts</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/banks/best-cd-rates/">Best CD Accounts</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/banks/checking-accounts/">Best Checking Accounts</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/banks/money-market/">Best Money Market Accounts</a>
+							</li>
+						</ul>
+					</li>
+					<li class="nav-menu__item">
+						<a href="/the-ascent/buying-stocks/" class="nav-menu__link nav--brokerages ">Brokerage</a>
+						<ul class="nav-submenu-list">
+							<li>
+								<a href="https://www.fool.com/the-ascent/buying-stocks/">Best Brokerages</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/buying-stocks/best-online-stock-brokers-beginners/">Beginner's Guide</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-options/">Best Options Brokers</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/buying-stocks/best-brokers-iras/">Best Brokers IRAs</a>
+							</li>
+							<li>
+								<a href="#">Best Robo Advisors</a>
+							</li>
+						</ul>
+					</li>
+					<li class="nav-menu__item">
+						<a href="/the-ascent/personal-loans/" class="nav-menu__link nav--loans ">Loans</a>
+					</li>
+					<li class="nav-menu__item">
+						<a href="/the-ascent/blog/" class="nav-menu__link nav--blog ">Blog</a>
+						<ul class="nav-submenu-list">
+							<li>
+								<a href="https://www.fool.com/the-ascent/credit-cards/blog/">Credit Cards</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/banks/blog/">Banking</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/buying-stocks/blog/">Brokerage</a>
+							</li>
+							<li>
+								<a href="https://www.fool.com/the-ascent/personal-loans/blog/">Loans</a>
+							</li>
+							<li>
+								<a href="#">Best Robo Advisors</a>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</nav>
+
     </div>
   </div>
 </body>
