adjust markup to help with styling of colored hover effect

--- a/nav.html
+++ b/nav.html
@@ -30,8 +30,8 @@
       </div>
 			<nav class="nav-menu" aria-label="Main Navigation">
 				<ul class="nav-menu-list">
-					<li class="nav-menu__item">
-						<a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link nav--credit ">Credit Cards</a>
+					<li class="nav-menu__item nav--credit">
+						<a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link">Credit Cards</a>
 						<ul class="nav-submenu-list">
 							<li class="nav-submenu__item">
 								<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/">Best Credit Cards for 2019</a>
@@ -60,14 +60,13 @@
 							</li>
 						</ul>
 					</li>
-					<li class="nav-menu__item">
-						<a href="/the-ascent/banks/" class="nav-menu__link nav--banking ">Banking</a>
+					<li class="nav-menu__item nav--banking">
+						<a href="/the-ascent/banks/" class="nav-menu__link">Banking</a>
 						<ul class="nav-submenu-list">
 								<li class="nav-submenu__item">
 										<a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/best-savings-accounts/">Best Savings Accounts</a>
 							</li>
 							<li class="nav-submenu__item">
-
 								<a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/best-cd-rates/">Best CD Accounts</a>
 							</li>
 							<li class="nav-submenu__item">
@@ -78,8 +77,8 @@
 							</li>
 						</ul>
 					</li>
-					<li class="nav-menu__item">
-						<a href="/the-ascent/buying-stocks/" class="nav-menu__link nav--brokerages ">Brokerage</a>
+					<li class="nav-menu__item nav--brokerages ">
+						<a href="/the-ascent/buying-stocks/" class="nav-menu__link">Brokerage</a>
 						<ul class="nav-submenu-list">
 								<li class="nav-submenu__item">
 										<a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/">Best Brokerages</a>
@@ -98,11 +97,11 @@
 							</li>
 						</ul>
 					</li>
-					<li class="nav-menu__item">
-						<a href="/the-ascent/personal-loans/" class="nav-menu__link nav--loans ">Loans</a>
+					<li class="nav-menu__item nav--loans">
+						<a href="/the-ascent/personal-loans/" class="nav-menu__link">Loans</a>
 					</li>
-					<li class="nav-menu__item">
-						<a href="/the-ascent/blog/" class="nav-menu__link nav--blog ">Blog</a>
+					<li class="nav-menu__item nav--blog ">
+						<a href="/the-ascent/blog/" class="nav-menu__link">Blog</a>
 						<ul class="nav-submenu-list">
 								<li class="nav-submenu__item">
 										<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/blog/">Credit Cards</a>
