--- a/nav.html
+++ b/nav.html
@@ -30,8 +30,11 @@
       </div>
 			<nav class="nav-menu" aria-label="Main Navigation">
 				<ul class="nav-menu-list">
-					<li class="nav-menu__item nav--credit">
-						<a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link">Credit Cards</a>
+					<li class="nav-menu__item has-submenu nav--credit">
+						<a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" >Credit Cards</a>
+						<button aria-expanded="false" class="nav-arrow">
+							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
+						</button>
 						<ul class="nav-submenu-list">
 							<li class="nav-submenu__item">
 								<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/">Best Credit Cards for 2019</a>
@@ -60,8 +63,11 @@
 							</li>
 						</ul>
 					</li>
-					<li class="nav-menu__item nav--banking">
-						<a href="/the-ascent/banks/" class="nav-menu__link">Banking</a>
+					<li class="nav-menu__item has-submenu nav--banking">
+						<a href="/the-ascent/banks/" class="nav-menu__link aria-haspopup="true" aria-expanded="false" ">Banking</a>
+						<button aria-expanded="false" class="nav-arrow">
+							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
+						</button>
 						<ul class="nav-submenu-list">
 								<li class="nav-submenu__item">
 										<a class="nav-menu__link" href="https://www.fool.com/the-ascent/banks/best-savings-accounts/">Best Savings Accounts</a>
@@ -77,11 +83,14 @@
 							</li>
 						</ul>
 					</li>
-					<li class="nav-menu__item nav--brokerages ">
-						<a href="/the-ascent/buying-stocks/" class="nav-menu__link">Brokerage</a>
+					<li class="nav-menu__item has-submenu nav--brokerages ">
+						<a href="/the-ascent/buying-stocks/" class="nav-menu__link aria-haspopup="true" aria-expanded="false" ">Brokerage</a>
+						<button aria-expanded="false" class="nav-arrow">
+							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
+						</button>
 						<ul class="nav-submenu-list">
-								<li class="nav-submenu__item">
-										<a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/">Best Brokerages</a>
+							<li class="nav-submenu__item">
+								<a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/">Best Brokerages</a>
 							</li>
 							<li class="nav-submenu__item">
 									<a class="nav-menu__link" href="https://www.fool.com/the-ascent/buying-stocks/best-online-stock-brokers-beginners/">Beginner's Guide</a>
@@ -98,10 +107,13 @@
 						</ul>
 					</li>
 					<li class="nav-menu__item nav--loans">
-						<a href="/the-ascent/personal-loans/" class="nav-menu__link">Loans</a>
+						<a href="/the-ascent/personal-loans/" class="nav-menu__link aria-haspopup="false" aria-expanded="false" ">Loans</a>
 					</li>
-					<li class="nav-menu__item nav--blog ">
+					<li class="nav-menu__item has-submenu nav--blog aria-haspopup="true" aria-expanded="false" 	">
 						<a href="/the-ascent/blog/" class="nav-menu__link">Blog</a>
+						<button aria-expanded="false" class="nav-arrow">
+							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
+						</button>
 						<ul class="nav-submenu-list">
 								<li class="nav-submenu__item">
 										<a class="nav-menu__link" href="https://www.fool.com/the-ascent/credit-cards/blog/">Credit Cards</a>
