--- a/nav.html
+++ b/nav.html
@@ -31,8 +31,8 @@
 			<nav class="nav-menu" aria-label="Main Navigation">
 				<ul class="nav-menu-list">
 					<li class="nav-menu__item has-submenu nav--credit">
-						<a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" >Credit Cards</a>
-						<button title="Open dropdown" aria-expanded="false" class="nav-arrow">
+						<a aria-current="page" href="/the-ascent/credit-cards/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" aria-label="Credit Cards section" >Credit Cards</a>
+						<button title="Open menu" aria-expanded="false" class="nav-arrow">
 							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
 						</button>
 						<ul class="nav-submenu-list">
@@ -64,8 +64,8 @@
 						</ul>
 					</li>
 					<li class="nav-menu__item has-submenu nav--banking">
-						<a href="/the-ascent/banks/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false">Banking</a>
-						<button title="Open dropdown" aria-expanded="false" class="nav-arrow">
+						<a href="/the-ascent/banks/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" aria-label="Banking section">Banking</a>
+						<button title="Open menu" aria-expanded="false" class="nav-arrow">
 							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
 						</button>
 						<ul class="nav-submenu-list">
@@ -84,8 +84,8 @@
 						</ul>
 					</li>
 					<li class="nav-menu__item has-submenu nav--brokerages ">
-						<a href="/the-ascent/buying-stocks/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false">Brokerage</a>
-						<button title="Open dropdown" aria-expanded="false" class="nav-arrow">
+						<a href="/the-ascent/buying-stocks/" class="nav-menu__link" aria-haspopup="true" aria-expanded="false" aria-label="Brokerage section">Brokerage</a>
+						<button title="Open menu" aria-expanded="false" class="nav-arrow">
 							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
 						</button>
 						<ul class="nav-submenu-list">
@@ -107,11 +107,11 @@
 						</ul>
 					</li>
 					<li class="nav-menu__item nav--loans">
-						<a href="/the-ascent/personal-loans/" class="nav-menu__link" aria-haspopup="false" aria-expanded="false">Loans</a>
+						<a href="/the-ascent/personal-loans/" class="nav-menu__link" aria-haspopup="false" aria-expanded="false" aria-label="Loans section">Loans</a>
 					</li>
 					<li class="nav-menu__item has-submenu nav--blog" aria-haspopup="true" aria-expanded="false">
 						<a href="/the-ascent/blog/" class="nav-menu__link">Blog</a>
-						<button title="Open dropdown" aria-expanded="false" class="nav-arrow">
+						<button title="Open menu" aria-expanded="false" class="nav-arrow">
 							<svg fill="#474747"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path  d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"/></svg>
 						</button>
 						<ul class="nav-submenu-list">
