updates logo path

--- a/nav.html
+++ b/nav.html
@@ -17,7 +17,7 @@
         <div class="nav__name-wrapper">
           <h2 class="nav__name">
             <a class="nav__link" href="https://www.fool.com/the-ascent/">
-              <img class="nav__logo" srcset="//g.foolcdn.com/static/affiliates/project/images/the-ascent-logo.png 1x, //g.foolcdn.com/static/affiliates/project/images/the-ascent-logo%402x.png 2x" src="//g.foolcdn.com/static/affiliates/project/images/the-ascent-logo.png" alt="The Ascent" sizes="200px">
+              <img class="nav__logo" srcset="https://g.foolcdn.com/static/affiliates/project/images/the-ascent-logo.png 1x, https://g.foolcdn.com/static/affiliates/project/images/the-ascent-logo%402x.png 2x" src="https://g.foolcdn.com/static/affiliates/project/images/the-ascent-logo.png" alt="The Ascent" sizes="200px">
             </a>
           </h2>
           <h4 class="nav__byline">By <a class="nav__byline__link" href="https://www.fool.com">The Motley Fool</a></h4>
